<resources>
    <string name="app_name">Justlearn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_menu">Tab Menu</string>
    <string name="explore">Explore</string>
    <string name="chats">Chats</string>
    <string name="create">Create</string>
    <string name="image">Image</string>
    <string name="profile">Profile</string>
    <string name="tab_title">Tab Title</string>
    <string name="avatar_name">Avatar Name</string>
    <string name="avatar_introduction">Avatar Introduction</string>
    <string name="chatgpt_characters">ChatGPT Characters</string>
    <string name="avatar_image">AVATAR IMAGE</string>
    <string name="avatar_title">Avatar Title</string>
    <string name="search_chatgpt_characters">Search ChatGPT Characters</string>
    <string name="search">Search</string>
    <string name="avatar_profile_image">AVATAR PROFILE IMAGE</string>
    <string name="message">Message</string>
    <string name="send_button">SEND BUTTON</string>
    <string name="avatar_subtitle">Avatar Subtitle</string>
    <string name="user_profile_image">USER PROFILE IMAGE</string>
    <string name="ai_chat_profile_image">AI CHAT PROFILE IMAGE</string>
    <string name="describe_your_ai_chatbot">Describe your AI chatbot</string>
    <string name="btn_create">Create</string>
    <string name="profile_text_login">Log in with your Justlearn account to continue</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="checkbox_newsletter_text">Yes, please email me with Justlearn exclusive content</string>
    <string name="checkbox_tos_text">I have read and accept the Terms of Service and Privacy Policy</string>
    <string name="do_you_have_justlearn_account_log_in">Do you have Justlearn account? Log in</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="do_you_not_have_an_account_sign_up">Do you not have an account? Sign up</string>
    <string name="continue_to_reset_pass">Continue</string>
    <string name="back_to_login">Back to login</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="call">Call</string>
    <string name="upgrade_to_plus">Upgrade to Plus</string>
    <string name="subscription_price1">$9.99/mo</string>
    <string name="subscription_benefits1">Call AI chatbots</string>
    <string name="subscription_benefits2">Create AI chatbots</string>
    <string name="subscription_benefits3">Access to AI images</string>
    <string name="avatar_tabs">AVATAR TABS</string>
    <string name="thumbs_down">THUMBS DOWN</string>
    <string name="thumbs_up">THUMBS UP</string>
    <string name="hello_how_may_i_help_you_today">Hello! How may I help you today?</string>
    <string name="hi">Hi</string>
    <string name="google">Google</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>

    <!-- strings required for facebook login -->
    <string name="facebook_app_id">603839641922414</string>
    <string name="facebook_client_token">ae99c6091947d61d9ab46c022ff24a72</string>
    <string name="google_server_client_id">582701295115-5h011c0o3ausejv2grccedsh29n1r0sj.apps.googleusercontent.com</string>


    <string name="browse_ai_chatbots">Browse AI Chatbots</string>
    <string name="chat_with_ai_chatbots">Chat with AI Chatbots</string>
    <string name="logout">Logout</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="settings">Settings</string>
</resources>