<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".LoginActivity"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/center_container"
        android:padding="10dp">

        <ImageView
            android:id="@+id/just_learn_logo"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_justlearn_logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_to_continue"
            android:textSize="20sp"
            android:fontFamily="@font/helvetica_regular"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/just_learn_logo"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/sign_up_benefits1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_ai_chatbots"
            android:textSize="18sp"
            android:fontFamily="@font/helvetica_regular"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sign_up_text"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/sign_up_benefits2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_with_ai_chatbots"
            android:textSize="18sp"
            android:fontFamily="@font/helvetica_regular"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/sign_up_benefits1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/center_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">


        <LinearLayout
            android:id="@+id/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blue_all_side_four_dp"
            android:padding="20dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook_logo_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="-20dp"
                android:fontFamily="@font/helvetica_normal"
                android:gravity="center"
                android:text="@string/sign_up_with_facebook"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_red_all_side_four_dp"
            android:padding="20dp"
            android:layout_below="@id/facebook_button">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/google"
                android:src="@drawable/ic_google_logo_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="-20dp"
                android:fontFamily="@font/helvetica_normal"
                android:gravity="center"
                android:text="@string/sign_up_with_google"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_white_all_side_four_dp"
            android:padding="20dp"
            android:layout_below="@id/google_button">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_icon"
                android:gravity="start" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="-20dp"
                android:fontFamily="@font/helvetica_normal"
                android:gravity="center"
                android:text="@string/sign_up_with_email"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold"  />

        </LinearLayout>



    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dividerThickness="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/center_container"
        />


    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/divider"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/AlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/already_have_an_account"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/helvetica_normal"
            android:text="@string/login"
            android:textColor="@drawable/bg_btn"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>

    </LinearLayout>



</RelativeLayout>