<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ImageFragment"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/describe_your_ai_chatbot"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_image_describe_chatbot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/describe_your_ai_chatbot"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_image"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_create"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/generated_avatar_profile_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/avatar_placeholder"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

</LinearLayout>